# circuit-breaker

./: README.markdown  circuit-breaker.cabal  stack.yaml
app/: Main.hs
bench/: Bench.hs
src/: CircuitBreaker.hs
src/CircuitBreaker/: Internal.hs  Options.hs  Types.hs
test/: Test.hs
