Name:                circuit-breaker
Version:             0.0.0.0
Synopsis:
Description:
License:             BSD3
License-File:        LICENSE
Author:              Paulo Tanimoto
Maintainer:          ptanimoto@gmail.com
Category:
Build-Type:          Simple
Cabal-version:       >= 1.10

-------------------------------------------------------------------------------

Source-Repository head
  Type:              git
  Location:          https://github.com/Paulo Tanimoto/circuit-breaker

-------------------------------------------------------------------------------

Library
  Hs-Source-Dirs:
    src

  Exposed-Modules:
    CircuitBreaker
    CircuitBreaker.Options
    CircuitBreaker.Types

  Other-Modules:

  Build-Depends:
      base                                   >=      4.0      && <      5.0
    , containers                             >=      0.4
    , bytestring                             >=      0.9
    , time                                   >=      1.4
    , old-locale                             >=      1.0

    , aeson                                  >=      0.8
    , async                                  >=      2.0
    , conduit                                >=      1.0
    , conduit-extra                          >=      1.1
    , deepseq                                >=      1.3
    , http-conduit                           >=      2.1
    , lens                                   >=      4.0
    , mtl                                    >=      2.1
    , optparse-applicative                   >=      0.11
    , resourcet                              >=      1.1
    , text                                   >=      1.1
    , transformers                           >=      0.3
    , unordered-containers                   >=      0.2
    , vector                                 >=      0.10
    , yaml                                   >=      0.8

  Ghc-Options:
    -Wall

  Default-Language: Haskell2010

-------------------------------------------------------------------------------

Executable circuit-breaker
  Hs-Source-Dirs:
    app

  Main-is:
    Main.hs

  Other-Modules:

  Build-Depends:
      circuit-breaker
    , base                                   >=      4.0      && <      5.0

  Ghc-Options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  Default-Language: Haskell2010

-------------------------------------------------------------------------------

Test-Suite Tests
  Hs-Source-Dirs:
    test

  Main-is:
    Test.hs

  Type:
    exitcode-stdio-1.0

  Build-Depends:
      circuit-breaker
    , base                                   >=      4.0      && <      5.0
    , Cabal                                  >=      1.18
    , HUnit                                  >=      1.2
    , QuickCheck                             >=      2.7
    , smallcheck                             >=      1.1
    , tasty                                  >=      0.10
    , tasty-hunit                            >=      0.9
    , tasty-quickcheck                       >=      0.8
    , tasty-smallcheck                       >=      0.8

  Ghc-Options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  Default-Language:    Haskell2010

-------------------------------------------------------------------------------

Benchmark Bench
  Hs-Source-Dirs:
    bench

  Main-is:
    Bench.hs

  Type:
    exitcode-stdio-1.0

  Build-Depends:
      circuit-breaker
    , base                                   >=      4.0      && <      5.0
    , deepseq                                >=      1.3
    , criterion                              >=      1.0

  Ghc-Options:
    -Wall
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N

  Default-Language:    Haskell2010
