Name:                circuit-breaker
Version:             0.1.0.0
Synopsis:
Description:
License:             BSD3
License-File:        LICENSE
Author:              Paulo Tanimoto
Maintainer:          ptanimoto@gmail.com
Category:
Build-Type:          Simple
Cabal-version:       >= 1.10

-------------------------------------------------------------------------------

Source-Repository head
  Type:              git
  Location:          https://github.com/tanimoto/circuit-breaker

-------------------------------------------------------------------------------

Library
  Hs-Source-Dirs:
    src

  Exposed-Modules:
    CircuitBreaker
    CircuitBreaker.Internal

  Build-Depends:
      base                                   >=      4.0      && <      5.0
    , time                                   >=      1.4
    , stm                                    >=      2.3

  Ghc-Options:
    -Wall

  Default-Language:
    Haskell2010

-------------------------------------------------------------------------------

Test-Suite Tests
  Hs-Source-Dirs:
    test

  Main-is:
    Test.hs

  Type:
    exitcode-stdio-1.0

  Build-Depends:
      circuit-breaker
    , base                                   >=      4.0      && <      5.0
    , time                                   >=      1.4
    , async                                  >=      2.0
    , stm                                    >=      2.3
    , Cabal                                  >=      1.18
    , HUnit                                  >=      1.2
    , tasty                                  >=      0.10
    , tasty-hunit                            >=      0.9

  Ghc-Options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  Default-Language:
    Haskell2010

-------------------------------------------------------------------------------

Benchmark Bench
  Hs-Source-Dirs:
    bench

  Main-is:
    Bench.hs

  Type:
    exitcode-stdio-1.0

  Build-Depends:
      circuit-breaker
    , base                                   >=      4.0      && <      5.0
    , deepseq                                >=      1.3
    , criterion                              >=      1.0

  Ghc-Options:
    -Wall
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N

  Default-Language:
    Haskell2010
